--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -2,9 +2,11 @@
 .card {
     width: 90%;
     max-width: 40rem;
-    margin: 2rem ;
-    padding: 1rem;
+   
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
     border-radius: 14px;
     background-color: white;
+    margin: 0.5rem 0;
+    padding: 1rem;
+
   }
