--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,17 @@
 
-  .form-actions{
+  .actions{
     display: flex;
     justify-content: flex-end;
     
     padding-top: 1rem;
 }
 
-.form-actions> button{
+.actions> button{
     margin: 0 0.5rem;
+}
+
+.header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
