--- a/src/components/User/Users.module.css
+++ b/src/components/User/Users.module.css
@@ -5,9 +5,6 @@
     margin: 2rem ;
     padding: 1rem;
     grid-template-columns: 1fr 1fr;
+    gap: 1.2rem;
 }
 
-.users__actions
-{
-    /* position: fixed; top: 2rem; left: 35rem;  */
-}
