--- a/src/App.css
+++ b/src/App.css
@@ -13,5 +13,10 @@
 .header{
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
+}
+
+input#search
+{
+    max-width: 60%;
 }
